feat: change APIs to take UUID instead of attempt ID
- backend API endpoints have been updated, but frontend
has not been updated yet to use these new endpoints.
Will do in next commit.
- also removed SQLite stuff
