# backend/src/app.js
@@ -9,12 +9,14 @@ const stopsVisitedRouter = require('./routes/stopsVisited');
 const stopsRouter = require('./routes/stops');
 const routesRouter = require('./routes/routes');
 const transfersRouter = require('./routes/transfers');
+const journeyRouter = require('./routes/journey');
 
 app.use('/routes', routesRouter);
 app.use('/transfers', transfersRouter);
 app.use('/users', usersRouter);
 app.use('/attempts', attemptsRouter);
-app.use('/attempts/:attemptId/stops_visited', stopsVisitedRouter);
+app.use('/attempts/current/stops_visited', stopsVisitedRouter);
+app.use('/attempts/current/journey', journeyRouter);
 app.use('/stops', stopsRouter);
 
 module.exports = app;
